# relay-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  design.pen  docker-compose.yml
doc/: agent_discovery_plan.md  backend_plan.md  frontend_plan.md  memory.md  pitch_demo.md  relay-rs.postman_collection.json  task1.md  tenancy.md  thread_panel_refactor_export.md
doc/bruno/: 01 - Create Session.bru  02 - Submit Prompt.bru  03 - Idempotent Retry.bru  04 - SSE Stream.bru  04 - Thread Stream.bru  05 - Cancel Request.bru  06 - Create MCP Server.bru  07 - List MCP Servers.bru  08 - Read MCP Server.bru  09 - Update MCP Server.bru  10 - Delete MCP Server.bru  11 - Create Session With Agent.bru  12 - Create Agent.bru  13 - List Agents.bru  14 - Read Agent.bru  15 - Update Agent.bru  16 - Delete Agent.bru  17 - List Threads.bru  18 - Thread Messages.bru  20 - Multi-Agent Scenario.bru  bruno.json
doc/bruno/Agents/: 01 - Create Agent.bru  02 - List Agents.bru  03 - Read Agent.bru  04 - Update Agent.bru  05 - Delete Agent.bru
doc/bruno/MCP Servers/: 01 - Create MCP Server.bru  02 - List MCP Servers.bru  03 - Read MCP Server.bru  04 - Update MCP Server.bru  05 - Delete MCP Server.bru
doc/bruno/Memory/: 01 - List Memory.bru  02 - Create Operator Note.bru  03 - Pin Memory.bru  04 - Unpin Memory.bru  05 - List Memory Events.bru  06 - Revert Memory Event.bru
doc/bruno/Prompts/: 01 - Submit Prompt.bru  02 - Idempotent Retry.bru  03 - Cancel Request.bru
doc/bruno/Scenarios/: 01 - Multi-Agent Scenario.bru
migrations/: 00000000000001_init.sql  00000000000002_add_mcp_servers.down.sql  00000000000002_add_mcp_servers.up.sql  00000000000003_add_agents.down.sql  00000000000003_add_agents.up.sql  00000000000004_multi_agent_comm.down.sql  00000000000004_multi_agent_comm.up.sql  00000000000005_queue_traceparent.down.sql  00000000000005_queue_traceparent.up.sql  00000000000006_session_messages_request_id.down.sql  00000000000006_session_messages_request_id.up.sql  00000000000007_memory.down.sql  00000000000007_memory.up.sql  00000000000008_reflection.down.sql  00000000000008_reflection.up.sql  00000000000009_lifecycle_and_librarian.down.sql  00000000000009_lifecycle_and_librarian.up.sql  00000000000010_system_participant.down.sql  00000000000010_system_participant.up.sql  00000000000011_scheduled_tasks.down.sql  00000000000011_scheduled_tasks.up.sql  00000000000012_agent_allowed_mcp_servers.down.sql  00000000000012_agent_allowed_mcp_servers.up.sql  00000000000013_agent_discovery.down.sql  00000000000013_agent_discovery.up.sql  00000000000014_tenancy_foundation.down.sql  00000000000014_tenancy_foundation.up.sql  00000000000015_agents_tenancy.down.sql  00000000000015_agents_tenancy.up.sql  00000000000016_sessions_tenancy.down.sql  00000000000016_sessions_tenancy.up.sql  00000000000017_memory_tenancy.down.sql  00000000000017_memory_tenancy.up.sql  00000000000018_runtime_tenancy.down.sql  00000000000018_runtime_tenancy.up.sql  00000000000019_scheduling_tenancy.down.sql  00000000000019_scheduling_tenancy.up.sql  00000000000020_mcp_catalog_audit.down.sql  00000000000020_mcp_catalog_audit.up.sql  00000000000020_org_language.up.sql  (+13 more)
src/: app.rs  cache.rs  cli.rs  clock.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  pg_vector.rs
src/agent/: builder.rs  core.rs  error.rs  limits.rs  mod.rs  turn.rs
src/agent_core/: builder.rs  core.rs  error.rs  limits.rs  log.rs  mod.rs  observer.rs  outcome.rs  reflect.rs  turn.rs
src/agents/: cache.rs  error.rs  limits.rs  mod.rs  pg_store.rs  registry.rs  render.rs  store.rs  types.rs
src/auth/: error.rs  jwt.rs  language.rs  limits.rs  locale_hint.rs  mod.rs  oauth_google.rs  org_language.rs  pg_store.rs  store.rs  types.rs
src/crypto/: error.rs  mod.rs
src/hook/: dispatcher.rs  error.rs  mod.rs  traits.rs
src/http/: auth_layer.rs  csrf.rs  error.rs  mcp_routes.rs  membership_cache.rs  mod.rs  routes.rs  state.rs
src/mcp/: client.rs  credentials.rs  error.rs  limits.rs  mod.rs  pg_credentials.rs  pg_store.rs  rate_limit.rs  refresher.rs  registry.rs  scoped.rs  store.rs  tool.rs  types.rs
src/memory/: agent.rs  composer.rs  librarian.rs  limits.rs  loader.rs  mod.rs  pg_store.rs  reflection_scheduler.rs  scheduled_task.rs  session_cache.rs  static.rs  store.rs  traits.rs  types.rs  vector.rs
src/observability/: console.rs  event_filter.rs  gen_ai.rs  log.rs  mod.rs  otlp.rs  propagation.rs
src/prompts/: en.toml  internal.toml  mod.rs  vi.toml
src/provider/: chat.rs  embedding.rs  error.rs  mod.rs  traits.rs
src/runtime/: dag.rs  error.rs  limits.rs  mod.rs  pg_queue.rs  pg_response.rs  pg_thread_stream.rs  queue.rs  response.rs  types.rs  worker.rs
src/scheduling/: error.rs  limits.rs  mod.rs  pg_store.rs  scheduled_task.rs  scheduler.rs  store.rs  types.rs
src/session/: error.rs  limits.rs  mod.rs  pg_store.rs  store.rs  traits.rs
src/tools/: limits.rs  mod.rs  modes.rs  pg_recorder.rs  recorder.rs  registry.rs  toolbox.rs  traits.rs  url.rs  web_fetch.rs  web_search.rs
src/types/: agent_reply.rs  error.rs  limits.rs  macros.rs  mod.rs  model_id.rs  participant.rs  prompt.rs  secret.rs  tool_name.rs
tests/: agent_loop.rs  agent_memory.rs  agent_to_agent.rs  agent_tool_calls_list.rs  auth_agents.rs  auth_mcp_servers.rs  auth_memory.rs  auth_prompts.rs  auth_scheduled_tasks.rs  auth_threads.rs  auth_typed_tx.rs  auth_worker_writes.rs  create_agent_tool.rs  dag_budget.rs  human_delivery.rs  mcp_oauth_refresher.rs  mcp_tool_calls_list.rs  memory_tools.rs  pg_agent_store.rs  pg_mcp_oauth_stores.rs  pg_mcp_server_store.rs  pg_memory_store.rs  pg_prompt_queue.rs  pg_response_hub.rs  pg_scheduled_task_store.rs  pg_session_store.rs  pingpong_guard.rs  prompts_routes.rs  quiescence.rs  reflection_pipeline.rs  runtime_pipeline.rs  scheduling_pipeline.rs  session_resolve.rs  threads_routes.rs  tool_calls_record.rs
tests/common/: auth.rs  embedding.rs  harness.rs  lang.rs  mod.rs  pg.rs
web/: README.md  build.ts  dev.ts  index.html  mock-backend.ts  package.json  tsconfig.json
web/src/: App.tsx  index.css  main.tsx
(+132 files in other folders)
